<resources>
    <string name="app_name">sqlite</string>
    <string name="enter_book_name">Enter Book Name</string>
    <string name="enter_author_name">Enter Author Name</string>
    <string name="enter_name_of_the_patron">Enter Name of the Patron</string>
    <string name="enter_librarians_name">Enter Librarians Name</string>
    <string name="submit">Submit</string>
    <string name="enter_the_genre">Enter the Genre</string>
    <string name="library_management_system">Library Management System</string>
</resources>